@@ -15,15 +15,15 @@ remove = strict
 remove = Test::More
 
 [Prereqs]
-Acme::Alien::DontPanic                         = 0.021
-Acme::Ford::Prefect                            = 0.021
-Acme::Ford::Prefect::FFI                       = 0.18
-Alien::Base                                    = 0.016
+Acme::Alien::DontPanic                         = 0.023
+Acme::Ford::Prefect                            = 0.023
+Acme::Ford::Prefect::FFI                       = 0.20
+Alien::Base                                    = 0.017
 Alien::bison                                   = 0.11
 Alien::bz2                                     = 0.16
 Alien::bz2::Installer                          = 0.05
 Alien::Editline                                = 0.04
-Alien::FFI                                     = 0.10
+Alien::FFI                                     = 0.11
 Alien::flex                                    = 0.03
 Alien::gmake                                   = 0.06
 Alien::Libarchive                              = 0.24
@@ -35,7 +35,7 @@ Alien::nasm                                    = 0.08
 Alien::o2dll                                   = 0.03
 Alien::Packages::Cygwin                        = 0.03
 Alien::patch                                   = 0.04
-;Alt::Alien::FFI::System                       = 0.10
+;Alt::Alien::FFI::System                       = 0.11
 AnyEvent::Finger                               = 0.10
 AnyEvent::FTP                                  = 0.08
 AnyEvent::Git::Wrapper                         = 0.07
@@ -44,6 +44,7 @@ AnyEvent::Open3::Simple                        = 0.82
 AnyEvent::WebSocket::Client                    = 0.30
 App::cpangitify                                = 0.12
 App::pwhich                                    = 1.14
+App::palien                                    = 0.02
 App::RegexFileUtils                            = 0.06
 App::spaceless                                 = 0.06
 App::which_package                             = 0.05
@@ -52,7 +53,7 @@ Archive::Libarchive::Any                       = 0.0801
 Archive::Libarchive::FFI                       = 0.0802
 Archive::Libarchive::XS                        = 0.0800
 Authen::Simple::PlugAuth                       = 0.01
-Clustericious                                  = 0.9945
+Clustericious                                  = 0.9946
 Clustericious::Admin                           = 0.25
 Dist::Zilla::MintingProfile::Clustericious     = 0.02
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
@@ -60,7 +61,9 @@ Dist::Zilla::Plugin::InsertExample             = 0.04
 Dist::Zilla::Plugin::JavaScript::Minifier      = 0.02
 Dist::Zilla::Plugin::jQuery                    = 0.03
 Dist::Zilla::Plugin::MathInt64                 = 0.08
+Dist::Zilla::Plugin::OurPkgVersion             = 0.06
 Dist::Zilla::Plugin::Template::Tiny            = 0.04
+Dist::Zilla::Plugin::Test::Version             = 0.04
 Dist::Zilla::Plugin::TextTabs                  = 0.03
 Dist::Zilla::PluginBundle::ACPS                = 0.30
 Dist::Zilla::PluginBundle::Author::Plicease    = 1.69
@@ -78,7 +81,7 @@ FFI::TinyCC                                    = 0.21
 FFI::Util                                      = 0.14
 File::LibMagic::FFI                            = 0.04
 File::Listing::Ftpcopy                         = 0.06
-File::Which                                    = 1.16
+File::Which                                    = 1.18
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
 Log::Log4perl::Appender::TAP                   = 0.02
 Mojolicious::Plugin::Ident                     = 0.31
@@ -98,6 +101,8 @@ Term::EditLine                                 = 0.07
 Test::CChecker                                 = 0.05
 Test::Clustericious::Cluster                   = 0.20
 Test::Fixme                                    = 0.14
+Test::Script                                   = 1.08
+Test::Version                                  = 2.00
 URI::ws                                        = 0.03
 UUID::FFI                                      = 0.05
 WebService::LiveJournal                        = 0.07
