@@ -27,6 +27,7 @@ AnyEvent::WebSocket::Client
 App::RegexFileUtils
 App::cpangitify
 App::cpanminus
+App::palien
 App::pwhich
 App::spaceless
 App::which_package
@@ -48,8 +49,10 @@ Dist::Zilla::Plugin::InsertExample
 Dist::Zilla::Plugin::JavaScript::Minifier
 Dist::Zilla::Plugin::MathInt64
 Dist::Zilla::Plugin::Meta::Dynamic::Config
+Dist::Zilla::Plugin::OurPkgVersion
 Dist::Zilla::Plugin::PPPort
 Dist::Zilla::Plugin::Template::Tiny
+Dist::Zilla::Plugin::Test::Version
 Dist::Zilla::Plugin::TextTabs
 Dist::Zilla::Plugin::jQuery
 Dist::Zilla::PluginBundle::ACPS
@@ -123,8 +126,10 @@ Test::NoTabs
 Test::Pod
 Test::Pod::Coverage
 Test::Pod::Spelling::CommonMistakes
+Test::Script
 Test::Spelling
 Test::Strict
+Test::Version
 Text::Tabs
 Try::Tiny
 URI
